# gently-cc

./: .gitignore  .npmignore  BRIEF.md  CLAUDE.jsonl  CLAUDE.md  Cargo.toml  PLAN.md  README.md  brief.html  package.json  plan.dag.json  project.codex.json
.github/workflows/: ci.yml  release.yml
bs-artisan/: Cargo.toml
bs-artisan/src/: barf.rs  foam.rs  main.rs  tests.rs  torus.rs
codie/: Cargo.toml
codie/src/: compress.rs  decompress.rs  glyph.rs  hash.rs  hook.rs  main.rs  operator.rs  stats.rs
demo/: run-demo.sh
gently/: package.json
gently-codec/: Cargo.toml
gently-codec/src/: crystal.rs  grid.rs  main.rs  parser.rs  pin.rs  scope.rs
gently-codegen/: Cargo.toml
gently-codegen/examples/: api_agent.rs  crud_user.rs
gently-codegen/fixtures/: api_agent.rs  crud_user.rs
gently-codegen/src/: ast.rs  emitter.rs  main.rs  parser.rs  templates.rs
gently/src/: agents.js  chat.js  cli.js  keys.js  llm.js  session.js
hooks/: codie-compress.js  response-extract.js  session-start.js  stop.js
scripts/: test-all.sh
skills/autopilot/: SKILL.md
skills/codec/: SKILL.jsonl  SKILL.md
skills/codie/: SKILL.md
skills/crystal/: SKILL.md
skills/gently/: SKILL.md
skills/grind/: SKILL.md
skills/identity/: SKILL.jsonl  SKILL.md
skills/ralph/: SKILL.md
skills/scope/: SKILL.md
skills/social/: SKILL.md
skills/team/: SKILL.md
src/: anchor.js  anomaly-bus.js  claim.js  cli.js  clone.js  cold-process.js  install.js  materialize.js  mcp-server.js  minisign.pub  plan.js  recover.js  theme.js  verify.js
src/__tests__/: anomaly-bus.test.js  (+1 more)
